--- a/src/features/vehicle/VehicleDetailPage.module.css
+++ b/src/features/vehicle/VehicleDetailPage.module.css
@@ -484,7 +484,6 @@
   .auctionPanel {
     position: sticky;
     top: 100px;
-    max-height: calc(100vh - 120px);
   }
 
   .titleSection h1 {
